# testdrive-flutter

./: .clang-format  .gitmodules  README.md  ReleaseNotes.md  get-version-strings  run-integration-tests  run-tests
.github/workflows/: main.yml
audiolist/: .metadata  README.md  pubspec.yaml
audiolist/android/app/: build.gradle
audiolist/android/app/src/debug/: AndroidManifest.xml
audiolist/android/app/src/main/: AndroidManifest.xml
audiolist/lib/: main.dart
audiolist/lib/data/: filesystem_entry.dart  list_directory.dart
audiolist/lib/ui/: audiolist_app.dart  filesystem_listing.dart  main_page.dart  styles.dart
audiolist/test/: widget_test.dart
audiolist/test/ui/: audiolist_app_test.dart  filesystem_listing_test.dart
audiolist/windows/: CMakeLists.txt
audiolist/windows/runner/: Runner.rc  main.cpp
find_audiofiles/: .metadata  README.md  ffigen.yaml  pubspec.yaml
find_audiofiles/android/: build.gradle  settings.gradle
find_audiofiles/android/src/main/: AndroidManifest.xml
find_audiofiles/example/: README.md  pubspec.yaml
find_audiofiles/example/android/app/: build.gradle
find_audiofiles/example/android/app/src/debug/: AndroidManifest.xml
find_audiofiles/example/android/app/src/main/: AndroidManifest.xml
find_audiofiles/example/integration_test/: find_audiofiles_test.dart
find_audiofiles/example/lib/: main.dart
find_audiofiles/example/windows/: CMakeLists.txt
find_audiofiles/example/windows/flutter/: generated_plugins.cmake
find_audiofiles/example/windows/runner/: Runner.rc  main.cpp
find_audiofiles/lib/: find_audiofiles.dart  find_audiofiles_bindings_generated.dart
find_audiofiles/lib/src/: bindings.dart  find_audiofiles.dart  find_audiofiles_bindings_generated.dart  find_audiofiles_cb.dart  find_audiofiles_compute.dart  find_audiofiles_messages.dart
find_audiofiles/src/: CMakeLists.txt  find_audiofiles.c  find_audiofiles.cpp  find_audiofiles.h
find_audiofiles/windows/: CMakeLists.txt
shared/: CMakeLists.txt
shared/find-audiofiles/: CMakeLists.txt
shared/find-audiofiles/include/find_audiofiles/: audiofile_scanner.hpp  find_audiofiles.h  find_audiofiles_cb.hpp
shared/find-audiofiles/src/: audiofile_iterator.hpp  audiofile_scanner.cpp  find_audiofiles.cpp
test_data/: pubspec.yaml
test_data/data/Book1/: Chapter1.m4a  Chapter2.m4a
test_data/data/Regularm4bBook/: Regularm4bBook.m4b
test_data/lib/: test_data.dart
test_data/test/: test_data_test.dart
(+2 files in other folders)
